<?xml version="1.0"?>
<package format="2">
  <name>delivery_nodejs</name>
  <version>0.0.0</version>
  <description>delivery service robot web menu plate package</description>

  <maintainer email="jomiseon@todo.todo">jomiseon</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Apache 2.0</license>
  
    <buildtool_depend>catkin</buildtool_depend>

</package>
